--- a/ContactBook-2.0/app/src/main/res/values/strings.xml
+++ b/ContactBook-2.0/app/src/main/res/values/strings.xml
@@ -3,6 +3,22 @@
     <string name="button_more">添加更多</string>
     <string name="title_activity_company_worker">CompanyWorkerActivity</string>
     <string name="hint"></string>
+    <array name="letter_tile_colors">
+        <item>#f16364</item>
+        <item>#f58559</item>
+        <item>#f9a43e</item>
+        <item>#e4c62e</item>
+        <item>#67bf74</item>
+        <item>#59a2be</item>
+        <item>#2093cd</item>
+        <item>#ad62a7</item>
+    </array>
+
+    <!-- The default letter tile text size -->
+    <dimen name="tile_letter_font_size">17sp</dimen>
+    <!-- The deafult tile size -->
+    <dimen name="letter_tile_size">32dp</dimen>
+    <!-- /LetterTileProvider -->
     <string name="large_text">
         "Material is the metaphor.\n\n"
 
@@ -93,4 +109,7 @@
         "when a user tries to pick up one of cards.\n\n"
     </string>
     <string name="action_settings">Settings</string>
+
+    <!-- TODO: Remove or change this placeholder text -->
+    <string name="hello_blank_fragment">Hello blank fragment</string>
 </resources>
